@@ -1,8 +1,8 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.2'
-    id 'io.spring.dependency-management' version '1.1.2'
-    id 'org.graalvm.buildtools.native' version '0.9.23'
+    id 'org.springframework.boot' version '3.2.0-M2'
+    id 'io.spring.dependency-management' version '1.1.3'
+    id 'org.graalvm.buildtools.native' version '0.9.24'
 }
 
 group = 'com.example'
@@ -14,6 +14,7 @@ java {
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/milestone' }
 }
 
 dependencies {
@@ -49,3 +50,18 @@ tasks.withType(JavaExec) {
 test {
     jvmArgs(['--enable-preview'])
 }
+
+graalvmNative {
+
+    binaries {
+        main {
+            buildArgs.add('--enable-preview')
+        }
+    }
+}
+
+/*java {
+    toolchain { languageVersion = JavaLanguageVersion.of(20) }
+}*/
+
+test.onlyIf {!project.hasProperty("skipTests")}
